--- a/_layouts/skeletal_home.html
+++ b/_layouts/skeletal_home.html
@@ -26,7 +26,7 @@ layout: base
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Zillion Web UI</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Zillion Demo UI and Web API</h6>
+          <h6 class="card-subtitle mb-2 text-muted">Demo UI and Web API</h6>
           <p class="card-text">Zillion Web is a monorepo Vue frontend UI and Python backend API with a main objective of
             demonstrating and testing some use cases for Zillion. Check out the live demo and example Warehouses.</p>
           <a href="https://github.com/totalhack/zillion-web" class="card-link">Source</a>
